@@ -1,3 +1,8 @@
+2006-05-06  Hans-Bernhard Broeker  <broeker@physik.rwth-achen.de>
+
+	* src/fscanner.l: Accept numeric literals inside fcn definitions
+	and calls.
+
 2006-04-21  Hans-Bernhard Broeker  <broeker@physik.rwth-achen.de>
 
 	Make source clean under -Wsign-compare.
